# reimagined-succotash

main/: CMakeLists.txt  main.c
main/BSP/: GPL811X.c  GPL811X.h  bsp_config.h  bsp_key.c  bsp_key.h  bsp_lcd.c  bsp_lcd.h  bsp_log.h  bsp_uart.c  bsp_uart.h  bsp_wifi.c  bsp_wifi.h
main/BSP/LCD/: lcd_display.c  lcd_display.h  ws3900_lcd.h
main/BSP/spi/: bsp_soft_spi.c  bsp_soft_spi.h  bsp_spi.c  bsp_spi.h  bsp_spi2.c  bsp_spi2.h  bsp_spi_lock.c  bsp_spi_lock.h
